--- a/quarto-1.qmd
+++ b/quarto-1.qmd
@@ -3,3 +3,12 @@ title: "quarto-1"
 author: "Bingbing Luo"
 format: html
 ---
+```{r}
+library(tidyverse)
+library(palmerpenguins)
+```
+```{r}
+penguins |> ggplot(mapping = aes(x = body_mass_g, y = flipper_length_mm, color = species)) + geom_point() +
+  labs(title = "Penguins Body Mass compared to Flipper Length", x = "Body Mass", y = "Flipper Length")
+```
+
